[gd_scene load_steps=9 format=2]

[ext_resource path="res://popups/message.gd" type="Script" id=1]
[ext_resource path="res://ui/game/person.png" type="Texture" id=2]
[ext_resource path="res://ui/SourceSansPro-Black.ttf" type="DynamicFontData" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 160, 110 )

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/grey_panel.png-89acf553604fa125cb8e3723367d8ee3.stex"

[sub_resource type="DynamicFont" id=3]
size = 28
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=5]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ui:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.0353412, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -160, -90 ), Vector2( -160, -120 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ui:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.588235 ), Color( 1, 1, 1, 1 ) ]
}

[node name="message" type="Area2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.000305176, -0.999785 )
shape = SubResource( 1 )

[node name="ui" type="Node2D" parent="."]
position = Vector2( -160, -120 )
script = ExtResource( 1 )

[node name="bg" type="Sprite" parent="ui"]
position = Vector2( 160, 110 )
scale = Vector2( 3.24125, 2.13123 )
texture = SubResource( 2 )

[node name="OK" type="Button" parent="ui"]
margin_left = 28.0
margin_top = 159.0
margin_right = 84.0
margin_bottom = 193.0
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="See you soon!" type="Button" parent="ui"]
margin_left = 103.432
margin_top = 159.0
margin_right = 204.432
margin_bottom = 193.0
text = "See you soon!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Can\'t talk" type="Button" parent="ui"]
margin_left = 221.154
margin_top = 159.0
margin_right = 293.154
margin_bottom = 193.0
text = "Can't talk"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="ui"]
position = Vector2( 55.867, 67.7452 )
scale = Vector2( 0.211002, 0.21668 )
texture = ExtResource( 2 )

[node name="name" type="Label" parent="ui"]
margin_left = 92.5298
margin_top = 26.3842
margin_right = 232.53
margin_bottom = 62.3842
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.6, 0.6, 0.6, 1 )
text = "Name Here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="message" type="Label" parent="ui"]
margin_left = 93.0
margin_top = 56.0
margin_right = 305.0
margin_bottom = 125.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.6, 0.6, 0.6, 1 )
text = "This is my boss, Jonathan Hart, a self-made millionaire, heâ€™s quite a guy."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fade_in"
anims/fade_in = SubResource( 5 )
[connection signal="pressed" from="ui/OK" to="ui" method="_on_OK_pressed"]
[connection signal="pressed" from="ui/See you soon!" to="ui" method="_on_See_you_soon_pressed"]
[connection signal="pressed" from="ui/Can't talk" to="ui" method="_on_Cant_talk_pressed"]
